@@ -1,3 +1,8 @@
+2005-08-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* nucleus/pod.c (xnpod_schedule, xnpod_schedule_runnable): Avoid
+	calling xnpod_current_sched after each context switch.
+
 2005-08-20  Philippe Gerum  <rpm@xenomai.org>
 
 	* arch/i386/patches: Upgrade to r13c1.
